--- a/components/styles/global.scss
+++ b/components/styles/global.scss
@@ -503,7 +503,6 @@ img {
 .language-logo-badge--img {
   user-select: none;
   margin: 0 4px;
-  object-fit: cover;
 }
 
 .hljs-keyword,
